--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,17 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  animation: App-logo-spin infinite 0.2s linear;
+  height: 30vmin;
   pointer-events: none;
 }
 
+h1 {
+  font-size: 70pt;
+}
+
 .App-header {
-  background-color: #282c34;
+  background-color: #3b2a2a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
