--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,12 +1,12 @@
 // variables
 $primary: #3b2a2a;
-$secondary: #971b1b;
+$secondary: rgb(236, 134, 16);
 $tertiary: rgb(255, 240, 221);
 
-$text-primary: black;
+$text-primary: rgb(91, 56, 138);
 $text-secondary: white;
 
-$accent: rgb(209, 180, 84);
+$accent: rgb(202, 172, 241);
 
 $base-space: 10px;
 
