--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,17 +4,43 @@
   position: fixed;
   z-index: 1;
   background-color: $secondary;
-  width: 15vw;
-  height: 100vh;
+  width: 100vw;
+  height: 3em;
   @extend %flex-centered;
-  align-items: flex-start;
+  justify-content: space-around;
   color: white;
   border-right: $accent solid 0.5pt;
-
+  color: $text-primary;
   h1 {
-    width: 1em;
-    font-size: 40pt;
+    font-size: 25pt;
     text-align: center;
     @extend %flex-centered;
+  }
+  .make-post-button {
+    min-width: fit-content;
+    height: fit-content;
+    padding: $base-space * 0.5;
+    background-color: rgb(245, 190, 124);
+    border: solid $accent 1pt;
+    border-radius: 20px;
+  }
+  .show {
+    background-color: rgb(67, 168, 76);
+    color: $text-secondary;
+  }
+}
+
+////////////////////////////////////////////////////
+
+@media only screen and (min-width: 425px) {
+  .app-header {
+    height: 5em;
+    h1 {
+      font-size: 30pt;
+    }
+    .make-post-button {
+      font-size: 20pt;
+      padding: $base-space;
+    }
   }
 }
