--- a/src/components/post/post.module.scss
+++ b/src/components/post/post.module.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 
 .post {
-  width: 75vw;
+  width: 250px;
   min-height: 15vh;
   margin: $base-space * 1.5;
   background-color: $tertiary;
@@ -15,15 +15,22 @@
     padding: $base-space;
     text-align: center;
     border-bottom: solid rgb(240, 226, 208) 1pt;
+    text-decoration: underline;
+    color: $text-primary;
   }
   .article {
     width: 100%;
-    padding: 0 $base-space 0 $base-space;
+    padding: $base-space;
+    font-weight: 400;
+    color: $text-primary;
   }
   .poster {
     width: 100%;
     padding: $base-space;
     text-align: right;
     border-top: solid rgb(240, 226, 208) 1pt;
+    font-weight: 100;
+    font-size: 9pt;
+    color: black;
   }
 }
