added favicon of varying sizes and registered the serviceworker. is now a PWA, downloadable from the browser

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,6 @@
 // variables
 $primary: #3b2a2a;
-$secondary: rgb(236, 134, 16);
+$secondary: #ec8610;
 $tertiary: rgb(255, 240, 221);
 
 $text-primary: rgb(91, 56, 138);
