added login, registration pages and routed the site. though no functionality yet, login takes you straight into the site

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,6 +2,7 @@
 $primary: #3b2a2a;
 $secondary: #ec8610;
 $tertiary: rgb(255, 240, 221);
+$quaternary: rgb(245, 190, 124);
 
 $text-primary: rgb(91, 56, 138);
 $text-secondary: white;
