--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -20,9 +20,10 @@
     min-width: fit-content;
     height: fit-content;
     padding: $base-space * 0.5;
-    background-color: rgb(245, 190, 124);
+    background-color: $quaternary;
     border: solid $accent 1pt;
     border-radius: 20px;
+    cursor: pointer;
   }
   .show {
     background-color: rgb(67, 168, 76);
