--- a/src/components/makePost/makePost.module.scss
+++ b/src/components/makePost/makePost.module.scss
@@ -31,10 +31,11 @@
         min-width: 1.5em;
         height: 1.5em;
         padding: $base-space * 0.5;
-        background-color: rgb(245, 190, 124);
+        background-color: $quaternary;
         border: solid $accent 1pt;
         border-radius: 10px;
         @extend %flex-centered;
+        cursor: pointer;
       }
     }
     label {
@@ -48,20 +49,25 @@
       height: 2em;
       padding: $base-space;
       margin-bottom: $base-space * 1.5;
+      border-radius: 10px;
+      font-size: 14pt;
     }
     .article {
       width: 100%;
       height: 45vh;
       padding: $base-space;
       margin-bottom: $base-space * 1.5;
+      border-radius: 10px;
+      font-size: 12pt;
     }
     .post-button {
       min-width: fit-content;
       height: fit-content;
       padding: $base-space * 0.5;
-      background-color: rgb(245, 190, 124);
+      background-color: $quaternary;
       border: solid $accent 1pt;
       border-radius: 10px;
+      cursor: pointer;
     }
   }
 }
